2007-08-15  Simon Goodall  <simon@worldforge.org>

	* libwfut/IO.cpp: Include curl error reason in error message when a
	  file fails to download during polling.

2007-05-16  Simon Goodall  <simon@worldforge.org>

	* libwfut/IO.cpp: Cause curl to return an error instead of error pages
	  e.g. for a 404.

2007-05-06  Simon Goodall  <simon@worldforge.org>

	* libwfut/ChannelFileList.h: Added a size() method to return the number
	  of files being stored.

2007-05-02  Simon Goodall  <simon@worldforge.org>

	* libwfut/FileWriter.cpp: Fix bug where unsigned longs were being 
	  written as signed values into XML file.

	* libwfut/IO.cpp: Fix bug where empty files could cause a segfault.

	* tools/wfut.cpp: Print reason for download failure.

2007-04-12  Simon Goodall  <simon@worldforge.org>

	* tools/wfut.cpp: Add a win32 check around the srand48 call.

2007-04-12  Simon Goodall  <simon@worldforge.org>

	* libwfut/MirrorParser.cpp, libwfut/ChannelIO.h, libwfut/types.h,
	  libwfut/WFUT.cpp, libwfut/WFUT.h, libwfut/Makefile.am: Allow a list of
	  mirrors to be specified.

	* tools/wfut.cpp: Randomly select a mirror from the mirror list.

2007-04-12  Simon Goodall  <simon@worldforge.org>

	* libwfut/ChannelFileList.h: Added a clear method to clear the map.

2007-04-11  Simon Goodall  <simon@worldforge.org>

	* configure.ac, AUTHORS: Change contact email.

2007-03-22  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/WFUT.cpp, libwfut/WFUT.h: Added a new signal, UpdateReasons,
	  which is fired during the caclulateUpdates function. This feeds back
	  reasons why (or not) a file is updated to the client application.

	* libwfut/platform.cpp: Fixed the permissions set for executable files.

	* tools/wfut.cpp: Added callback for UpdateReason

2007-03-17  Simon Goodall  <libwfut@simongoodall.co.uk>

	* configure.ac: Bump version numbers.

	* Release version 0.1.0

2007-03-04  Simon Goodall  <libwfut@simongoodall.co.uk>
